Fix control bar alignment

--- a/car/parts/web/server/templates/static/style.css
+++ b/car/parts/web/server/templates/static/style.css
@@ -23,6 +23,7 @@
 
 #control-bars .row {
     margin-left: 0px;
+    margin-right: 0px;
 }
 
 .group-label {
